fix firefox and IE bug with input not showing typed values. Card 296

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -38,7 +38,7 @@ select {
 
 input, .form-control {
   background-color: $control-background-color;
-  padding: $medium-size;
+  padding: 0 $medium-size;
   border: none;
   box-shadow: none;
 }
